--- a/.github/workflows/enforcer.yaml
+++ b/.github/workflows/enforcer.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check branch
-        if: github.base_ref == 'main' && github.head_ref != 'dev'
+        if: github.base_ref == 'main' && (github.head_ref != 'dev' && !startsWith(github.head_ref, 'feature/'))
         run: |
           echo "ERROR: You can only merge to main from dev."
           exit 1
