--- a/.github/workflows/enforcer.yaml
+++ b/.github/workflows/enforcer.yaml
@@ -10,5 +10,5 @@ jobs:
       - name: Check branch
         if: github.base_ref == 'main' && (github.head_ref != 'dev' && !startsWith(github.head_ref, 'feature/'))
         run: |
-          echo "ERROR: You can only merge to main from dev."
+          echo "ERROR: You can only merge to main from dev & feature"
           exit 1
