--- a/.github/workflows/enforcer.yaml
+++ b/.github/workflows/enforcer.yaml
@@ -10,12 +10,12 @@ jobs:
       - name: Check branch Main
         if: github.base_ref == 'main' && (github.head_ref != 'stage')
         run: |
-          echo "ERROR: You can only merge to main from stage"
+          echo "ERROR: You can only merge to main from stage branch"
           exit 1
       - name: Check branch QA
         if: github.base_ref == 'qa' && (github.head_ref != 'feature' && !startsWith(github.head_ref, 'fix/'))
         run: |
-          echo "ERROR: You can only merge to main from feature & fix branch"
+          echo "ERROR: You can only merge to qa from feature & fix branch"
           exit 1
       - name: Check branch Stage
         if: github.base_ref == 'stage' && (github.head_ref != 'qa' && !startsWith(github.head_ref, 'hotfix/'))
