--- a/.github/workflows/auto-merge-dev-main.yaml
+++ b/.github/workflows/auto-merge-dev-main.yaml
@@ -18,4 +18,4 @@ jobs:
         with:
           source: 'dev'
           target: 'master'
-          github_token: 'ghp'
+          github_token: ${{ secrets.GHP }}
